| Summary: | ASTERISK-28505: app_voicemail/IMAP: segfault in leave_voicemail because not checking mailstream | ||
| Reporter: | Alexei Gradinari (alexei gradinari) | Labels: | |
| Date Opened: | 2019-08-14 14:41:36 | Date Closed: | 2019-08-19 07:36:13 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Applications/app_voicemail/IMAP |
| Versions: | 13.28.0 16.5.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | The function leave_voicemail checks If expungeonhangup is set, but does not check if IMAP stream is closed, so it calls imap function with NULL stream.
| ||
| Comments: | By: Asterisk Team (asteriskteam) 2019-08-14 14:41:37.022-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: Friendly Automation (friendly-automation) 2019-08-19 07:36:15.226-0500 Change 12740 merged by Joshua Colp: app_voicemail/IMAP: check mailstream not NULL in leave_voicemail [https://gerrit.asterisk.org/c/asterisk/+/12740|https://gerrit.asterisk.org/c/asterisk/+/12740] By: Friendly Automation (friendly-automation) 2019-08-19 07:36:34.925-0500 Change 12739 merged by Joshua Colp: app_voicemail/IMAP: check mailstream not NULL in leave_voicemail [https://gerrit.asterisk.org/c/asterisk/+/12739|https://gerrit.asterisk.org/c/asterisk/+/12739] By: Friendly Automation (friendly-automation) 2019-08-19 07:36:54.850-0500 Change 12743 merged by Joshua Colp: app_voicemail/IMAP: check mailstream not NULL in leave_voicemail [https://gerrit.asterisk.org/c/asterisk/+/12743|https://gerrit.asterisk.org/c/asterisk/+/12743] By: Friendly Automation (friendly-automation) 2019-08-19 07:37:18.234-0500 Change 12741 merged by Joshua Colp: app_voicemail/IMAP: check mailstream not NULL in leave_voicemail [https://gerrit.asterisk.org/c/asterisk/+/12741|https://gerrit.asterisk.org/c/asterisk/+/12741] By: Friendly Automation (friendly-automation) 2019-08-19 07:37:38.293-0500 Change 12742 merged by Joshua Colp: app_voicemail/IMAP: check mailstream not NULL in leave_voicemail [https://gerrit.asterisk.org/c/asterisk/+/12742|https://gerrit.asterisk.org/c/asterisk/+/12742] | ||